--- a/plots/fitp.tex
+++ b/plots/fitp.tex
@@ -3,43 +3,39 @@
 \begin{tabular}{c|c|c}
 Parameter & Value & Uncertainty \\
 \hline
-$L_{\psi(2S)}$ & 2.78922 & 0.114687 \\
-$L_{\chi_{c2}}$ & 6.23335 & 0.39684 \\
-$L_{\chi_{c1}}$ & 8.06499 & 0.486756 \\
-$L_{J/\psi}$ & 6.59051 & 0.191476 \\
-$L_{\Upsilon(3S)}$ & 9.12248 & 0.938732 \\
-$L_{\Upsilon(2S)}$ & 13.3237 & 1.27115 \\
-$L_{\chi_{b2}}$ & 6.23335 & fixed \\
-$L_{\chi_{b1}}$ & 8.06499 & fixed \\
-$L_{\Upsilon(1S)}$ & 19.4187 & 0.809001 \\
+$L_{\psi(2S)}$ & 2.78914 & 0.115015 \\
+$L_{\chi_{c2}}$ & 6.23336 & 0.386429 \\
+$L_{\chi_{c1}}$ & 8.06508 & 0.480829 \\
+$L_{J/\psi}$ & 6.59034 & 0.192304 \\
+$L_{\Upsilon(3S)}$ & 9.12241 & 0.940947 \\
+$L_{\Upsilon(2S)}$ & 13.3237 & 1.28683 \\
+$L_{\chi_{b2}}$ & 6.23336 & fixed \\
+$L_{\chi_{b1}}$ & 8.06508 & fixed \\
+$L_{\Upsilon(1S)}$ & 19.4173 & 0.830094 \\
 $A$ & 0 & fixed \\
-$\beta$ & 1.74657 & 0.0265473 \\
-$\tau$ & 1.64251 & 1.02267 \\
+$\beta$ & 1.74657 & 0.0269222 \\
+$\tau$ & 1.61512 & 1.00803 \\
 $\rho$ & 2.4 & fixed \\
 $\delta$ & 0.1 & fixed \\
-$b$ & 1.37034 & 0.0360187 \\
-$c$ & 10.7444 & 2.07639 \\
+$b$ & 1.36992 & 0.0360798 \\
+$c$ & 10.7645 & 2.09687 \\
 $d$ & 0 & fixed \\
 $e$ & 0 & fixed \\
-$BR_{ppdm}$ & 0.954735 & 0.0433501 \\
-$BR_{ppjdp}$ & 1.00025 & 0.00863517 \\
-$BR_{c2jpsi}$ & 1.00865 & 0.0349298 \\
-$BR_{c1jpsi}$ & 0.99171 & 0.03451 \\
-$BR_{jpsidm}$ & 1.0001 & 0.00549956 \\
-$BR_{b2ups1}$ & 0.973383 & 0.0563418 \\
-$BR_{b1ups1}$ & 1.02691 & 0.0572064 \\
-$BR_{ups3dm}$ & 0.99999 & 0.0956384 \\
-$BR_{ups2dm}$ & 1 & 0.086258 \\
-$BR_{ups1dm}$ & 1 & 0.0195162 \\
-$L_{CMS}$ & 0.988228 & 0.0188456 \\
-$L_{ATLAS}$ & 1.00108 & 0.0176559 \\
-$L_{ATLAS}(\Upsilon)$ & 1.03104 & 0.0212621 \\
-$L(13/7)_{c\overline c}$ & 1 & fixed \\
-$L(13/7)_{b\overline b}$ & 1 & fixed \\
-$L_{CMS}(13)$ & 0.999833 & 0.0214444 \\
-$\Delta M_{c\overline c}$ & 0 & fixed \\
-$\Delta M_{b\overline b}$ & 0 & fixed \\
+$BR_{ppdm}$ & 0.954793 & 0.0433835 \\
+$BR_{ppjdp}$ & 1.00025 & 0.00859227 \\
+$BR_{c2jpsi}$ & 1.00865 & 0.0347419 \\
+$BR_{c1jpsi}$ & 0.99171 & 0.0344315 \\
+$BR_{jpsidm}$ & 1.0001 & 0.00552119 \\
+$BR_{b2ups1}$ & 0.973388 & 0.0566327 \\
+$BR_{b1ups1}$ & 1.02691 & 0.057794 \\
+$BR_{ups3dm}$ & 0.999977 & 0.0961817 \\
+$BR_{ups2dm}$ & 1.00001 & 0.0866271 \\
+$BR_{ups1dm}$ & 1 & 0.0201422 \\
+$L_{CMS}$ & 0.988054 & 0.018757 \\
+$L_{ATLAS}$ & 1.00107 & 0.017614 \\
+$L_{ATLAS}(\Upsilon)$ & 1.03154 & 0.0212511 \\
+$L_{CMS}(13)$ & 0.999834 & 0.0220094 \\
 min $p_T/M$ & 2 & fixed \\
 \end{tabular}
-\caption{Fit parameters ($\chi^2$ / ndf = 389.658 / 248 = 1.5712)}
+\caption{Fit parameters ($\chi^2$ / ndf = 390.538 / 248 = 1.57475)}
 \end{table}
