--- a/plots/plot.tex
+++ b/plots/plot.tex
@@ -2,22 +2,24 @@
 
 \usepackage{graphicx}
 
+\usepackage[margin=0.1cm]{geometry}
+
 \begin{document}
 
 \begin{figure}
 \centering
-\includegraphics[width = 0.45\textwidth]{chic_ratio.pdf}
-\includegraphics[width = 0.45\textwidth]{chib_ratio.pdf}
+\includegraphics[width = 0.4\textwidth]{chicr.pdf}
+\includegraphics[width = 0.4\textwidth]{chibr.pdf}
 \caption{$\chi_{c,b}$ ratios}
 \end{figure}
 
 \begin{figure}
 \centering
-\includegraphics[width = 0.45\textwidth]{chic1_cs.pdf}
-\includegraphics[width = 0.45\textwidth]{chic2_cs.pdf}
+\includegraphics[width = 0.4\textwidth]{chic1_cs.pdf}
+\includegraphics[width = 0.4\textwidth]{chic2_cs.pdf}
 
-\includegraphics[width = 0.45\textwidth]{chic1_pull.pdf}
-\includegraphics[width = 0.45\textwidth]{chic2_pull.pdf}
+\includegraphics[width = 0.4\textwidth]{chic1_cs_pull.pdf}
+\includegraphics[width = 0.4\textwidth]{chic2_cs_pull.pdf}
 \caption{$\chi_c$ results}
 \end{figure}
 
@@ -25,11 +27,11 @@
 
 \begin{figure}
 \centering
-\includegraphics[width = 0.45\textwidth]{jpsi_cs.pdf}
-\includegraphics[width = 0.45\textwidth]{jpsi_cs_13.pdf}
+\includegraphics[width = 0.4\textwidth]{jpsi_cs.pdf}
+\includegraphics[width = 0.4\textwidth]{jpsi_13_cs.pdf}
 
-\includegraphics[width = 0.45\textwidth]{jpsi_pull.pdf}
-\includegraphics[width = 0.45\textwidth]{jpsi_pull_13.pdf}
+\includegraphics[width = 0.4\textwidth]{jpsi_cs_pull.pdf}
+\includegraphics[width = 0.4\textwidth]{jpsi_13_cs_pull.pdf}
 \caption{J/$\psi$ results}
 \end{figure}
 
@@ -37,11 +39,11 @@
 
 \begin{figure}
 \centering
-\includegraphics[width = 0.45\textwidth]{psiprime_cs.pdf}
-\includegraphics[width = 0.45\textwidth]{psiprime_cs_13.pdf}
+\includegraphics[width = 0.4\textwidth]{psiprime_cs.pdf}
+\includegraphics[width = 0.4\textwidth]{psiprime_13_cs.pdf}
 
-\includegraphics[width = 0.45\textwidth]{psiprime_pull.pdf}
-\includegraphics[width = 0.45\textwidth]{psiprime_pull_13.pdf}
+\includegraphics[width = 0.4\textwidth]{psiprime_cs_pull.pdf}
+\includegraphics[width = 0.4\textwidth]{psiprime_13_cs_pull.pdf}
 \caption{$\psi(2S)$ results}
 \end{figure}
 
@@ -49,11 +51,11 @@
 
 \begin{figure}
 \centering
-\includegraphics[width = 0.45\textwidth]{ups1S_cs.pdf}
-\includegraphics[width = 0.45\textwidth]{ups1S_cs_13.pdf}
+\includegraphics[width = 0.4\textwidth]{ups1S_cs.pdf}
+\includegraphics[width = 0.4\textwidth]{ups1S_13_cs.pdf}
 
-\includegraphics[width = 0.45\textwidth]{ups1S_pull.pdf}
-\includegraphics[width = 0.45\textwidth]{ups1S_pull_13.pdf}
+\includegraphics[width = 0.4\textwidth]{ups1S_cs_pull.pdf}
+\includegraphics[width = 0.4\textwidth]{ups1S_13_cs_pull.pdf}
 \caption{$\Upsilon(1S)$ results}
 \end{figure}
 
@@ -61,11 +63,11 @@
 
 \begin{figure}
 \centering
-\includegraphics[width = 0.45\textwidth]{ups2S_cs.pdf}
-\includegraphics[width = 0.45\textwidth]{ups2S_cs_13.pdf}
+\includegraphics[width = 0.4\textwidth]{ups2S_cs.pdf}
+\includegraphics[width = 0.4\textwidth]{ups2S_13_cs.pdf}
 
-\includegraphics[width = 0.45\textwidth]{ups2S_pull.pdf}
-\includegraphics[width = 0.45\textwidth]{ups2S_pull_13.pdf}
+\includegraphics[width = 0.4\textwidth]{ups2S_cs_pull.pdf}
+\includegraphics[width = 0.4\textwidth]{ups2S_13_cs_pull.pdf}
 \caption{$\Upsilon(2S)$ results}
 \end{figure}
 
@@ -73,11 +75,11 @@
 
 \begin{figure}
 \centering
-\includegraphics[width = 0.45\textwidth]{ups3S_cs.pdf}
-\includegraphics[width = 0.45\textwidth]{ups3S_cs_13.pdf}
+\includegraphics[width = 0.4\textwidth]{ups3S_cs.pdf}
+\includegraphics[width = 0.4\textwidth]{ups3S_13_cs.pdf}
 
-\includegraphics[width = 0.45\textwidth]{ups3S_pull.pdf}
-\includegraphics[width = 0.45\textwidth]{ups3S_pull_13.pdf}
+\includegraphics[width = 0.4\textwidth]{ups3S_cs_pull.pdf}
+\includegraphics[width = 0.4\textwidth]{ups3S_13_cs_pull.pdf}
 \caption{$\Upsilon(3S)$ results}
 \end{figure}
 
