--- a/plots/plot.tex
+++ b/plots/plot.tex
@@ -6,81 +6,16 @@
 
 \begin{document}
 
-\begin{figure}
-\centering
-\includegraphics[width = 0.4\textwidth]{chicr.pdf}
-\includegraphics[width = 0.4\textwidth]{chibr.pdf}
-\caption{$\chi_{c,b}$ ratios}
-\end{figure}
-
-\begin{figure}
-\centering
-\includegraphics[width = 0.4\textwidth]{chic1_cs.pdf}
-\includegraphics[width = 0.4\textwidth]{chic2_cs.pdf}
-
-\includegraphics[width = 0.4\textwidth]{chic1_cs_pull.pdf}
-\includegraphics[width = 0.4\textwidth]{chic2_cs_pull.pdf}
-\caption{$\chi_c$ results}
-\end{figure}
-
 \clearpage
 
 \begin{figure}
 \centering
-\includegraphics[width = 0.4\textwidth]{jpsi_cs.pdf}
-\includegraphics[width = 0.4\textwidth]{jpsi_13_cs.pdf}
+\includegraphics[width = 0.4\textwidth]{jpsi_LHCb_cs.pdf}
+\includegraphics[width = 0.4\textwidth]{ups1S_LHCb_cs.pdf}
 
-\includegraphics[width = 0.4\textwidth]{jpsi_cs_pull.pdf}
-\includegraphics[width = 0.4\textwidth]{jpsi_13_cs_pull.pdf}
-\caption{J/$\psi$ results}
-\end{figure}
-
-\clearpage
-
-\begin{figure}
-\centering
-\includegraphics[width = 0.4\textwidth]{psiprime_cs.pdf}
-\includegraphics[width = 0.4\textwidth]{psiprime_13_cs.pdf}
-
-\includegraphics[width = 0.4\textwidth]{psiprime_cs_pull.pdf}
-\includegraphics[width = 0.4\textwidth]{psiprime_13_cs_pull.pdf}
-\caption{$\psi(2S)$ results}
-\end{figure}
-
-\clearpage
-
-\begin{figure}
-\centering
-\includegraphics[width = 0.4\textwidth]{ups1S_cs.pdf}
-\includegraphics[width = 0.4\textwidth]{ups1S_13_cs.pdf}
-
-\includegraphics[width = 0.4\textwidth]{ups1S_cs_pull.pdf}
-\includegraphics[width = 0.4\textwidth]{ups1S_13_cs_pull.pdf}
-\caption{$\Upsilon(1S)$ results}
-\end{figure}
-
-\clearpage
-
-\begin{figure}
-\centering
-\includegraphics[width = 0.4\textwidth]{ups2S_cs.pdf}
-\includegraphics[width = 0.4\textwidth]{ups2S_13_cs.pdf}
-
-\includegraphics[width = 0.4\textwidth]{ups2S_cs_pull.pdf}
-\includegraphics[width = 0.4\textwidth]{ups2S_13_cs_pull.pdf}
-\caption{$\Upsilon(2S)$ results}
-\end{figure}
-
-\clearpage
-
-\begin{figure}
-\centering
-\includegraphics[width = 0.4\textwidth]{ups3S_cs.pdf}
-\includegraphics[width = 0.4\textwidth]{ups3S_13_cs.pdf}
-
-\includegraphics[width = 0.4\textwidth]{ups3S_cs_pull.pdf}
-\includegraphics[width = 0.4\textwidth]{ups3S_13_cs_pull.pdf}
-\caption{$\Upsilon(3S)$ results}
+\includegraphics[width = 0.4\textwidth]{jpsi_LHCb_cs_pull.pdf}
+\includegraphics[width = 0.4\textwidth]{ups1S_LHCb_cs_pull.pdf}
+\caption{J/$\psi$ and $\Upsilon(1S)$ results}
 \end{figure}
 
 \clearpage
