switched fitting to a class-based method

--- a/plots/fitp.tex
+++ b/plots/fitp.tex
@@ -3,24 +3,33 @@
 \begin{tabular}{c|c|c}
 Parameter & Value & Uncertainty \\
 \hline
-$L_{J/\psi}$ & 19.8931 & fixed \\
-$L_{\Upsilon(1S)}$ & 7.94916 & 0.305461 \\
+$L_{J/\psi}$ & 2.17414 & 0.0377571 \\
+$L_{\Upsilon(1S)}$ & 12.4441 & 0.154694 \\
+$L_{LHCb,\psi}(y1)$ & 0.79286 & 0.0200332 \\
+$L_{LHCb,\psi}(y2)$ & 0.7823 & 0.0198965 \\
+$L_{LHCb,\psi}(y3)$ & 0.698923 & 0.0186203 \\
+$L_{LHCb,\psi}(y4)$ & 0.593191 & 0.0211922 \\
+$L_{LHCb,\psi}(y5)$ & 0.512464 & 0.0148575 \\
+$L_{LHCb,\Upsilon}(y1)$ & 0.71977 & 0.0275889 \\
+$L_{LHCb,\Upsilon}(y2)$ & 0.82272 & 0.0244589 \\
+$L_{LHCb,\Upsilon}(y3)$ & 0.897688 & 0.0305045 \\
+$L_{LHCb,\Upsilon}(y4)$ & 0.725871 & 0.0455485 \\
 $A$ & 0 & fixed \\
-$\beta$ & 2.50167 & 0.0170657 \\
-$\tau$ & 1.14053 & 0.0392694 \\
-$\rho$ & 1.71706 & 0.150204 \\
+$\beta$ & 1.47506 & 0.0102009 \\
+$\tau$ & 1 & fixed \\
+$\rho$ & 2 & fixed \\
 $\delta$ & 0 & fixed \\
-$b$ & 0.56364 & 0.0210262 \\
+$b$ & 1.8 & fixed \\
 $c$ & 6 & fixed \\
 $d$ & 0 & fixed \\
 $e$ & 0 & fixed \\
 $BR_{jpsidm}$ & 1 & fixed \\
 $BR_{ups1dm}$ & 1 & fixed \\
-$L_{CMS}$ & 1 & fixed \\
-$L_{ATLAS}$ & 1 & fixed \\
-$L_{LHCb}(\psi)$ & 1 & fixed \\
-$L_{LHCb}(\Upsilon)$ & 1 & fixed \\
-min $p_T/M$ & 0 & fixed \\
+$\mathcal L_{CMS}$ & 1 & fixed \\
+$\mathcal L_{ATLAS}$ & 1 & fixed \\
+$\mathcal L_{LHCb}(\psi)$ & 1 & fixed \\
+$\mathcal L_{LHCb}(\Upsilon)$ & 1 & fixed \\
+min $p_T/M$ & 2 & fixed \\
 \end{tabular}
-\caption{Fit parameters ($\chi^2$ / ndf = 858.528 / 104 = 8.25508)}
+\caption{Fit parameters ($\chi^2$ / ndf = 89.5798 / 91 = 0.984394)}
 \end{table}
