--- a/plots/plot.tex
+++ b/plots/plot.tex
@@ -10,12 +10,24 @@
 
 \begin{figure}
 \centering
-\includegraphics[width = 0.4\textwidth]{jpsi_LHCb_cs.pdf}
-\includegraphics[width = 0.4\textwidth]{ups1S_LHCb_cs.pdf}
+\includegraphics[width = 0.4\textwidth]{jpsi_7_LHCb_cs.pdf}
+\includegraphics[width = 0.4\textwidth]{ups1_7_LHCb_cs.pdf}
 
-\includegraphics[width = 0.4\textwidth]{jpsi_LHCb_cs_pull.pdf}
-\includegraphics[width = 0.4\textwidth]{ups1S_LHCb_cs_pull.pdf}
-\caption{J/$\psi$ and $\Upsilon(1S)$ results}
+\includegraphics[width = 0.4\textwidth]{jpsi_7_LHCb_cs_pulls.pdf}
+\includegraphics[width = 0.4\textwidth]{ups1_7_LHCb_cs_pulls.pdf}
+\caption{J/$\psi$ and $\Upsilon(1S)$ LHCb results}
+\end{figure}
+
+\clearpage
+
+\begin{figure}
+\centering
+\includegraphics[width = 0.4\textwidth]{jpsi_7_CMS_cs.pdf}
+\includegraphics[width = 0.4\textwidth]{ups1_7_CMS_cs.pdf}
+
+\includegraphics[width = 0.4\textwidth]{jpsi_7_CMS_cs_pulls.pdf}
+\includegraphics[width = 0.4\textwidth]{ups1_7_CMS_cs_pulls.pdf}
+\caption{J/$\psi$ and $\Upsilon(1S)$ CMS/ATLAS results}
 \end{figure}
 
 \clearpage
