--- a/plots/fitp.tex
+++ b/plots/fitp.tex
@@ -3,19 +3,19 @@
 \begin{tabular}{c|c|c}
 Parameter & Value & Uncertainty \\
 \hline
-$L_{J/\psi}$ & 2.17414 & 0.0377571 \\
-$L_{\Upsilon(1S)}$ & 12.4441 & 0.154694 \\
-$L_{LHCb,\psi}(y1)$ & 0.79286 & 0.0200332 \\
-$L_{LHCb,\psi}(y2)$ & 0.7823 & 0.0198965 \\
-$L_{LHCb,\psi}(y3)$ & 0.698923 & 0.0186203 \\
-$L_{LHCb,\psi}(y4)$ & 0.593191 & 0.0211922 \\
-$L_{LHCb,\psi}(y5)$ & 0.512464 & 0.0148575 \\
-$L_{LHCb,\Upsilon}(y1)$ & 0.71977 & 0.0275889 \\
-$L_{LHCb,\Upsilon}(y2)$ & 0.82272 & 0.0244589 \\
-$L_{LHCb,\Upsilon}(y3)$ & 0.897688 & 0.0305045 \\
-$L_{LHCb,\Upsilon}(y4)$ & 0.725871 & 0.0455485 \\
+$L_{J/\psi}$ & 0.0131767 & 0.000228005 \\
+$L_{\Upsilon(1S)}$ & 0.0754519 & 0.000916177 \\
+$L_{LHCb,\psi}(y1)$ & 0.792067 & 0.0207153 \\
+$L_{LHCb,\psi}(y2)$ & 0.781018 & 0.0199357 \\
+$L_{LHCb,\psi}(y3)$ & 0.696348 & 0.0168867 \\
+$L_{LHCb,\psi}(y4)$ & 0.592474 & 0.0143136 \\
+$L_{LHCb,\psi}(y5)$ & 0.510542 & 0.0210865 \\
+$L_{LHCb,\Upsilon}(y1)$ & 0.715813 & 0.0263777 \\
+$L_{LHCb,\Upsilon}(y2)$ & 0.817948 & 0.0247887 \\
+$L_{LHCb,\Upsilon}(y3)$ & 0.892319 & 0.0300015 \\
+$L_{LHCb,\Upsilon}(y4)$ & 0.721147 & 0.0455872 \\
 $A$ & 0 & fixed \\
-$\beta$ & 1.47506 & 0.0102009 \\
+$\beta$ & 2.4653 & 0.0101375 \\
 $\tau$ & 1 & fixed \\
 $\rho$ & 2 & fixed \\
 $\delta$ & 0 & fixed \\
@@ -31,5 +31,5 @@ $\mathcal L_{LHCb}(\psi)$ & 1 & fixed \\
 $\mathcal L_{LHCb}(\Upsilon)$ & 1 & fixed \\
 min $p_T/M$ & 2 & fixed \\
 \end{tabular}
-\caption{Fit parameters ($\chi^2$ / ndf = 89.5798 / 91 = 0.984394)}
+\caption{Fit parameters ($\chi^2$ / ndf = 94.1591 / 91 = 1.03472)}
 \end{table}
