approximated function for cosalpha part

--- a/plots/fitp.tex
+++ b/plots/fitp.tex
@@ -3,24 +3,25 @@
 \begin{tabular}{c|c|c}
 Parameter & Value & Uncertainty \\
 \hline
-$L_{J/\psi}$ & 0.00555368 & 0.000140421 \\
-$L_{\Upsilon(1S)}$ & 0.0346351 & 0.000454576 \\
-$L_{LHCb,\psi}(y1)$ & 0.710282 & 0.0232269 \\
-$L_{LHCb,\psi}(y2)$ & 0.659817 & 0.0187811 \\
-$L_{LHCb,\psi}(y3)$ & 0.537924 & 0.0150495 \\
-$L_{LHCb,\psi}(y4)$ & 0.392646 & 0.0107165 \\
-$L_{LHCb,\psi}(y5)$ & 0.29182 & 0.0093838 \\
-$L_{LHCb,\Upsilon}(y1)$ & 0.58449 & 0.0211549 \\
-$L_{LHCb,\Upsilon}(y2)$ & 0.578947 & 0.0173543 \\
-$L_{LHCb,\Upsilon}(y3)$ & 0.514015 & 0.0188325 \\
-$L_{LHCb,\Upsilon}(y4)$ & 0.313235 & 0.0214344 \\
-$A$ & 0 & fixed \\
-$\beta$ & 2.42414 & 0.0112579 \\
+$L_{J/\psi}$ & 0.0175049 & 0.000259705 \\
+$L_{\Upsilon(1S)}$ & 0.0952529 & 0.0012021 \\
+$L_{LHCb,\psi}(y1)$ & 0.763024 & 0.0232255 \\
+$L_{LHCb,\psi}(y2)$ & 0.744014 & 0.0207009 \\
+$L_{LHCb,\psi}(y3)$ & 0.662466 & 0.0188873 \\
+$L_{LHCb,\psi}(y4)$ & 0.574775 & 0.0173826 \\
+$L_{LHCb,\psi}(y5)$ & 0.500975 & 0.0234344 \\
+$L_{LHCb,\Upsilon}(y1)$ & 0.704918 & 0.0283731 \\
+$L_{LHCb,\Upsilon}(y2)$ & 0.816657 & 0.0256167 \\
+$L_{LHCb,\Upsilon}(y3)$ & 0.922252 & 0.0337618 \\
+$L_{LHCb,\Upsilon}(y4)$ & 0.791433 & 0.0512896 \\
+$\beta$ & 2.47507 & 0.00952705 \\
 $\tau$ & 1 & fixed \\
 $\rho$ & 2 & fixed \\
 $\delta$ & 1 & fixed \\
+$\gamma_1$ & 2 & fixed \\
+$\gamma_2$ & 2 & fixed \\
 $b$ & 1.8 & fixed \\
-$c$ & 4 & fixed \\
+$c$ & 6 & fixed \\
 $d$ & 0 & fixed \\
 $e$ & 0 & fixed \\
 $BR_{jpsidm}$ & 1 & fixed \\
@@ -31,5 +32,5 @@ $\mathcal L_{LHCb}(\psi)$ & 1 & fixed \\
 $\mathcal L_{LHCb}(\Upsilon)$ & 1 & fixed \\
 min $p_T/M$ & 2 & fixed \\
 \end{tabular}
-\caption{Fit parameters ($\chi^2$ / ndf = 85.4575 / 91 = 0.939093)}
+\caption{Fit parameters ($\chi^2$ / ndf = 111.581 / 91 = 1.22616)}
 \end{table}
