revamped and went over all main codes in preparation for PDF source change

--- a/plots/fitp.tex
+++ b/plots/fitp.tex
@@ -3,34 +3,34 @@
 \begin{tabular}{c|c|c}
 Parameter & Value & Uncertainty \\
 \hline
-$L_{J/\psi}$ & 0.0175049 & 0.000259705 \\
-$L_{\Upsilon(1S)}$ & 0.0952529 & 0.0012021 \\
-$L_{LHCb,\psi}(y1)$ & 0.763024 & 0.0232255 \\
-$L_{LHCb,\psi}(y2)$ & 0.744014 & 0.0207009 \\
-$L_{LHCb,\psi}(y3)$ & 0.662466 & 0.0188873 \\
-$L_{LHCb,\psi}(y4)$ & 0.574775 & 0.0173826 \\
-$L_{LHCb,\psi}(y5)$ & 0.500975 & 0.0234344 \\
-$L_{LHCb,\Upsilon}(y1)$ & 0.704918 & 0.0283731 \\
-$L_{LHCb,\Upsilon}(y2)$ & 0.816657 & 0.0256167 \\
-$L_{LHCb,\Upsilon}(y3)$ & 0.922252 & 0.0337618 \\
-$L_{LHCb,\Upsilon}(y4)$ & 0.791433 & 0.0512896 \\
-$\beta$ & 2.47507 & 0.00952705 \\
+$L_{J/\psi}$ & 0.0100919 & 0.0014506 \\
+$L_{\Upsilon(1S)}$ & 0.0812392 & 0.00943734 \\
+$L_{LHCb,\psi}(y1)$ & 1 & fixed \\
+$L_{LHCb,\psi}(y2)$ & 1 & fixed \\
+$L_{LHCb,\psi}(y3)$ & 1 & fixed \\
+$L_{LHCb,\psi}(y4)$ & 1 & fixed \\
+$L_{LHCb,\psi}(y5)$ & 1 & fixed \\
+$L_{LHCb,\Upsilon}(y1)$ & 1 & fixed \\
+$L_{LHCb,\Upsilon}(y2)$ & 1 & fixed \\
+$L_{LHCb,\Upsilon}(y3)$ & 1 & fixed \\
+$L_{LHCb,\Upsilon}(y4)$ & 1 & fixed \\
+$\beta$ & 2.21927 & 0.0298944 \\
 $\tau$ & 1 & fixed \\
-$\rho$ & 2 & fixed \\
+$\rho$ & 1.44807 & 0.143223 \\
 $\delta$ & 1 & fixed \\
-$\gamma_1$ & 2 & fixed \\
-$\gamma_2$ & 2 & fixed \\
+$\lambda$ & 0 & fixed \\
+$\gamma$ & 2 & fixed \\
 $b$ & 1.8 & fixed \\
-$c$ & 6 & fixed \\
+$c$ & 9.51125 & 0.88165 \\
 $d$ & 0 & fixed \\
 $e$ & 0 & fixed \\
 $BR_{jpsidm}$ & 1 & fixed \\
-$BR_{ups1dm}$ & 1 & fixed \\
+$BR_{ups1dm}$ & 1 & 0.02016 \\
 $\mathcal L_{CMS}$ & 1 & fixed \\
 $\mathcal L_{ATLAS}$ & 1 & fixed \\
-$\mathcal L_{LHCb}(\psi)$ & 1 & fixed \\
-$\mathcal L_{LHCb}(\Upsilon)$ & 1 & fixed \\
+$\mathcal L_{LHCb}(\psi)$ & 0.999996 & 0.0349842 \\
+$\mathcal L_{LHCb}(\Upsilon)$ & 1 & 0.0169994 \\
 min $p_T/M$ & 2 & fixed \\
 \end{tabular}
-\caption{Fit parameters ($\chi^2$ / ndf = 111.581 / 91 = 1.22617)}
+\caption{Fit parameters ($\chi^2$ / ndf = 141.069 / 49 = 2.87896)}
 \end{table}
