change fit function integral; change input states; change normalization

--- a/plots/fitp.tex
+++ b/plots/fitp.tex
@@ -1,36 +1,21 @@
-\begin{table}
+\begin{table}[h!]
 \centering
 \begin{tabular}{c|c|c}
 Parameter & Value & Uncertainty \\
 \hline
-$L_{J/\psi}$ & 1.02732 & 0.0106839 \\
-$L_{\Upsilon(1S)}$ & 52.5966 & fixed \\
-$L_{LHCb,\psi}(y1)$ & 1 & fixed \\
-$L_{LHCb,\psi}(y2)$ & 1 & fixed \\
-$L_{LHCb,\psi}(y3)$ & 1 & fixed \\
-$L_{LHCb,\psi}(y4)$ & 1 & fixed \\
-$L_{LHCb,\psi}(y5)$ & 1 & fixed \\
-$L_{LHCb,\Upsilon}(y1)$ & 1 & fixed \\
-$L_{LHCb,\Upsilon}(y2)$ & 1 & fixed \\
-$L_{LHCb,\Upsilon}(y3)$ & 1 & fixed \\
-$L_{LHCb,\Upsilon}(y4)$ & 1 & fixed \\
-$\beta$ & 2.99675 & 0.00824038 \\
-$\tau$ & 0 & fixed \\
-$\rho$ & 2 & fixed \\
+$L_{J/\psi}$ & 5.77389 & 0.0177355 \\
+$L_{\Upsilon(1S)}$ & 1 & fixed \\
+$\beta$ & 2.86399 & 0.00519109 \\
+$\rho$ & 1.77375 & 0.167348 \\
 $\delta$ & 0 & fixed \\
-$\lambda$ & 0 & fixed \\
-$k$ & 0 & fixed \\
-$b$ & 1.8 & 1.41421 \\
-$c$ & 6 & 1.41421 \\
-$d$ & 0 & fixed \\
-$e$ & 0 & fixed \\
 $BR_{jpsidm}$ & 1 & fixed \\
 $BR_{ups1dm}$ & 1 & fixed \\
-$\mathcal L_{CMS}$ & 1 & fixed \\
-$\mathcal L_{ATLAS}$ & 1 & fixed \\
-$\mathcal L_{LHCb}(\psi)$ & 1 & fixed \\
-$\mathcal L_{LHCb}(\Upsilon)$ & 1 & fixed \\
+$\mathcal L_{CMS,7}$ & 1 & fixed \\
+$\mathcal L_{CMS,13}$ & 1 & fixed \\
+$\mathcal L_{LHCb,7}(J\psi)$ & 1 & fixed \\
+$\mathcal L_{LHCb,7}$ & 1 & fixed \\
+$\mathcal L_{LHCb,13}$ & 1 & fixed \\
 min $p_T/M$ & 2 & fixed \\
 \end{tabular}
-\caption{Fit parameters ($\chi^2$ / ndf = 146.176 / 63 = 2.32026)}
+\caption{Fit parameters ($\chi^2$ / ndf = 995.036 / 277 = 3.59219)}
 \end{table}
