--- a/plots/plot.tex
+++ b/plots/plot.tex
@@ -11,11 +11,11 @@
 \begin{figure}
 \centering
 \includegraphics[width = 0.4\textwidth]{jpsi_7_LHCb_cs.pdf}
-\includegraphics[width = 0.4\textwidth]{ups1_7_LHCb_cs.pdf}
+\includegraphics[width = 0.4\textwidth]{jpsi_13_LHCb_cs.pdf}
 
 \includegraphics[width = 0.4\textwidth]{jpsi_7_LHCb_cs_pulls.pdf}
-\includegraphics[width = 0.4\textwidth]{ups1_7_LHCb_cs_pulls.pdf}
-\caption{J/$\psi$ and $\Upsilon(1S)$ LHCb results}
+\includegraphics[width = 0.4\textwidth]{jpsi_13_LHCb_cs_pulls.pdf}
+\caption{J/$\psi$ 7 and 13 TeV LHCb results}
 \end{figure}
 
 \clearpage
@@ -23,11 +23,11 @@
 \begin{figure}
 \centering
 \includegraphics[width = 0.4\textwidth]{jpsi_7_CMS_cs.pdf}
-\includegraphics[width = 0.4\textwidth]{ups1_7_CMS_cs.pdf}
+\includegraphics[width = 0.4\textwidth]{jpsi_13_CMS_cs.pdf}
 
 \includegraphics[width = 0.4\textwidth]{jpsi_7_CMS_cs_pulls.pdf}
-\includegraphics[width = 0.4\textwidth]{ups1_7_CMS_cs_pulls.pdf}
-\caption{J/$\psi$ and $\Upsilon(1S)$ CMS/ATLAS results}
+\includegraphics[width = 0.4\textwidth]{jpsi_13_CMS_cs_pulls.pdf}
+\caption{J/$\psi$ 7 and 13 TeV CMS results}
 \end{figure}
 
 \clearpage
