new norm method; new fit function with integer beta; add psi2s to fits

--- a/fit_res/plots/fitp.tex
+++ b/fit_res/plots/fitp.tex
@@ -1,21 +1,21 @@
-\begin{table}
+\begin{table}[h!]
 \centering
 \begin{tabular}{c|c|c}
 Parameter & Value & Uncertainty \\
 \hline
-$L_{J/\psi}$ & 5.77389 & 0.0177355 \\
-$L_{\Upsilon(1S)}$ & 1 & fixed \\
-$\beta$ & 2.86399 & 0.00519109 \\
-$\rho$ & 1.77375 & 0.167348 \\
-$\delta$ & 0 & fixed \\
-$BR_{jpsidm}$ & 1 & fixed \\
-$BR_{ups1dm}$ & 1 & fixed \\
-$\mathcal L_{CMS,7}$ & 1 & fixed \\
-$\mathcal L_{CMS,13}$ & 1 & fixed \\
-$\mathcal L_{LHCb,7}(J\psi)$ & 1 & fixed \\
-$\mathcal L_{LHCb,7}$ & 1 & fixed \\
-$\mathcal L_{LHCb,13}$ & 1 & fixed \\
-min $p_T/M$ & 2 & fixed \\
+$L_{J/\psi}$ & 0.6452 & 0.0026 \\
+$L_{\psi(2S)}$ & 0.2643 & 0.0011 \\
+$\rho$ & 2.0 & fixed \\
+$\delta$ & 0.0 & fixed \\
+$f_{\beta=2}$ & 0.0543 & 0.0010 \\
+$BR_{jpsidm}$ & 1.0 & fixed \\
+$BR_{ups1dm}$ & 1.0 & fixed \\
+$\mathcal L_{CMS,7}$ & 1.0 & fixed \\
+$\mathcal L_{CMS,13}$ & 1.0 & fixed \\
+$\mathcal L_{LHCb,7}(J\psi)$ & 1.0 & fixed \\
+$\mathcal L_{LHCb,7}$ & 1.0 & fixed \\
+$\mathcal L_{LHCb,13}$ & 1.0 & fixed \\
+min $p_T/M$ & 2.0 & fixed \\
 \end{tabular}
-\caption{Fit parameters ($\chi^2$ / ndf = 995.036 / 277 = 3.59219)}
+\caption{Fit parameters ($\chi^2$ / ndf = 1372.5 / 474 = 2.9)}
 \end{table}
