--- a/plots/plot.tex
+++ b/plots/plot.tex
@@ -2,11 +2,10 @@
 
 \usepackage{graphicx}
 
-\usepackage[margin=0.1cm]{geometry}
+\usepackage{geometry}
 
 \begin{document}
-
-\clearpage
+\newgeometry{margin=0.1cm}
 
 \begin{figure}
 \centering
@@ -31,6 +30,31 @@
 \end{figure}
 
 \clearpage
+
+\begin{figure}
+\centering
+\includegraphics[width = 0.4\textwidth]{psi2_7_LHCb_cs.pdf}
+\includegraphics[width = 0.4\textwidth]{psi2_13_LHCb_cs.pdf}
+
+\includegraphics[width = 0.4\textwidth]{psi2_7_LHCb_cs_pulls.pdf}
+\includegraphics[width = 0.4\textwidth]{psi2_13_LHCb_cs_pulls.pdf}
+\caption{$\psi$(2S) 7 and 13 TeV LHCb results}
+\end{figure}
+
+\clearpage
+
+\begin{figure}
+\centering
+\includegraphics[width = 0.4\textwidth]{psi2_7_CMS_cs.pdf}
+\includegraphics[width = 0.4\textwidth]{psi2_13_CMS_cs.pdf}
+
+\includegraphics[width = 0.4\textwidth]{psi2_7_CMS_cs_pulls.pdf}
+\includegraphics[width = 0.4\textwidth]{psi2_13_CMS_cs_pulls.pdf}
+\caption{$\psi$(2S) 7 and 13 TeV CMS results}
+\end{figure}
+
+\clearpage
+\restoregeometry
 
 \input{fitp}
 
