add Upsilon states; update nuisance parameter matchup

--- a/fit_res/plots/fitp.tex
+++ b/fit_res/plots/fitp.tex
@@ -3,11 +3,14 @@
 \begin{tabular}{c|c|c}
 Parameter & Value & Uncertainty \\
 \hline
-$L_{J/\psi}$ & 0.6452 & 0.0026 \\
-$L_{\psi(2S)}$ & 0.2643 & 0.0011 \\
+$L_{J/\psi}$ & 1.0 & fixed \\
+$L_{\psi(2S)}$ & 1.0 & fixed \\
+$L_{\Upsilon(1S)}$ & 1.0 & fixed \\
+$L_{\Upsilon(2S)}$ & 1.0 & fixed \\
+$L_{\Upsilon(3S)}$ & 0.7375 & 0.0099 \\
 $\rho$ & 2.0 & fixed \\
 $\delta$ & 0.0 & fixed \\
-$f_{\beta=2}$ & 0.0543 & 0.0010 \\
+$f_{\beta=2}$ & 0.448 & 0.021 \\
 $BR_{jpsidm}$ & 1.0 & fixed \\
 $BR_{ups1dm}$ & 1.0 & fixed \\
 $\mathcal L_{CMS,7}$ & 1.0 & fixed \\
@@ -17,5 +20,5 @@ $\mathcal L_{LHCb,7}$ & 1.0 & fixed \\
 $\mathcal L_{LHCb,13}$ & 1.0 & fixed \\
 min $p_T/M$ & 2.0 & fixed \\
 \end{tabular}
-\caption{Fit parameters ($\chi^2$ / ndf = 1372.5 / 474 = 2.9)}
+\caption{Fit parameters ($\chi^2$ / ndf = 326.2 / 96 = 3.4)}
 \end{table}
