--- a/plots/plot.tex
+++ b/plots/plot.tex
@@ -54,6 +54,78 @@
 \end{figure}
 
 \clearpage
+
+\begin{figure}
+\centering
+\includegraphics[width = 0.4\textwidth]{ups1_7_LHCb_cs.pdf}
+\includegraphics[width = 0.4\textwidth]{ups1_13_LHCb_cs.pdf}
+
+\includegraphics[width = 0.4\textwidth]{ups1_7_LHCb_cs_pulls.pdf}
+\includegraphics[width = 0.4\textwidth]{ups1_13_LHCb_cs_pulls.pdf}
+\caption{$\Upsilon$(1S) 7 and 13 TeV LHCb results}
+\end{figure}
+
+\clearpage
+
+\begin{figure}
+\centering
+\includegraphics[width = 0.4\textwidth]{ups1_7_CMS_cs.pdf}
+\includegraphics[width = 0.4\textwidth]{ups1_13_CMS_cs.pdf}
+
+\includegraphics[width = 0.4\textwidth]{ups1_7_CMS_cs_pulls.pdf}
+\includegraphics[width = 0.4\textwidth]{ups1_13_CMS_cs_pulls.pdf}
+\caption{$\Upsilon$(1S) 7 and 13 TeV CMS results}
+\end{figure}
+
+\clearpage
+
+\begin{figure}
+\centering
+\includegraphics[width = 0.4\textwidth]{ups2_7_LHCb_cs.pdf}
+\includegraphics[width = 0.4\textwidth]{ups2_13_LHCb_cs.pdf}
+
+\includegraphics[width = 0.4\textwidth]{ups2_7_LHCb_cs_pulls.pdf}
+\includegraphics[width = 0.4\textwidth]{ups2_13_LHCb_cs_pulls.pdf}
+\caption{$\Upsilon$(2S) 7 and 13 TeV LHCb results}
+\end{figure}
+
+\clearpage
+
+\begin{figure}
+\centering
+\includegraphics[width = 0.4\textwidth]{ups2_7_CMS_cs.pdf}
+\includegraphics[width = 0.4\textwidth]{ups2_13_CMS_cs.pdf}
+
+\includegraphics[width = 0.4\textwidth]{ups2_7_CMS_cs_pulls.pdf}
+\includegraphics[width = 0.4\textwidth]{ups2_13_CMS_cs_pulls.pdf}
+\caption{$\Upsilon$(2S) 7 and 13 TeV CMS results}
+\end{figure}
+
+\clearpage
+
+\begin{figure}
+\centering
+\includegraphics[width = 0.4\textwidth]{ups3_7_LHCb_cs.pdf}
+\includegraphics[width = 0.4\textwidth]{ups3_13_LHCb_cs.pdf}
+
+\includegraphics[width = 0.4\textwidth]{ups3_7_LHCb_cs_pulls.pdf}
+\includegraphics[width = 0.4\textwidth]{ups3_13_LHCb_cs_pulls.pdf}
+\caption{$\Upsilon$(3S) 7 and 13 TeV LHCb results}
+\end{figure}
+
+\clearpage
+
+\begin{figure}
+\centering
+\includegraphics[width = 0.4\textwidth]{ups3_7_CMS_cs.pdf}
+\includegraphics[width = 0.4\textwidth]{ups3_13_CMS_cs.pdf}
+
+\includegraphics[width = 0.4\textwidth]{ups3_7_CMS_cs_pulls.pdf}
+\includegraphics[width = 0.4\textwidth]{ups3_13_CMS_cs_pulls.pdf}
+\caption{$\Upsilon$(3S) 7 and 13 TeV CMS results}
+\end{figure}
+
+\clearpage
 \restoregeometry
 
 \input{fitp}
