Update fbeta format; clean up plotting; get new datasets w CMS 13 TeV low-pT pts removed

--- a/fit_res/plots/fitp.tex
+++ b/fit_res/plots/fitp.tex
@@ -3,22 +3,24 @@
 \begin{tabular}{c|c|c}
 Parameter & Value & Uncertainty \\
 \hline
-$L_{J/\psi}$ & 1.0 & fixed \\
-$L_{\psi(2S)}$ & 1.0 & fixed \\
-$L_{\Upsilon(1S)}$ & 1.0 & fixed \\
-$L_{\Upsilon(2S)}$ & 1.0 & fixed \\
-$L_{\Upsilon(3S)}$ & 0.7375 & 0.0099 \\
+$L_{J/\psi}$ & 0.6643 & 0.0079 \\
+$L_{\psi(2S)}$ & 0.2677 & 0.0031 \\
+$L_{\Upsilon(1S)}$ & 1.569 & 0.020 \\
+$L_{\Upsilon(2S)}$ & 1.116 & 0.017 \\
+$L_{\Upsilon(3S)}$ & 0.803 & 0.014 \\
 $\rho$ & 2.0 & fixed \\
 $\delta$ & 0.0 & fixed \\
-$f_{\beta=2}$ & 0.448 & 0.021 \\
-$BR_{jpsidm}$ & 1.0 & fixed \\
-$BR_{ups1dm}$ & 1.0 & fixed \\
-$\mathcal L_{CMS,7}$ & 1.0 & fixed \\
-$\mathcal L_{CMS,13}$ & 1.0 & fixed \\
-$\mathcal L_{LHCb,7}(J\psi)$ & 1.0 & fixed \\
-$\mathcal L_{LHCb,7}$ & 1.0 & fixed \\
-$\mathcal L_{LHCb,13}$ & 1.0 & fixed \\
-min $p_T/M$ & 2.0 & fixed \\
+$\mathcal L_{CMS,7}$ & 1.022 & 0.011 \\
+$\mathcal L_{CMS,13}$ & 1.074 & 0.014 \\
+$\mathcal L_{LHCb,7}(J/\psi)$ & 1.034 & 0.017 \\
+$\mathcal L_{LHCb,7}$ & 0.925 & 0.012 \\
+$\mathcal L_{LHCb,13}$ & 1.020 & 0.013 \\
+$f_{\beta=2,J/\psi}$ & 0.0545 & 0.0015 \\
+$f_{\beta=2,\psi(2S)}$ & 0.0938 & 0.0043 \\
+$f_{\beta=2,\Upsilon(1S)}$ & 0.213 & 0.013 \\
+$f_{\beta=2,\Upsilon(2S)}$ & 0.285 & 0.019 \\
+$f_{\beta=2,\Upsilon(3S)}$ & 0.380 & 0.022 \\
+min $p_T/M$ & 2.000 & fixed \\
 \end{tabular}
-\caption{Fit parameters ($\chi^2$ / ndf = 326.2 / 96 = 3.4)}
+\caption{Fit parameters ($\chi^2$ / ndf = 1731.9 / 685 = 2.5)}
 \end{table}
