--- a/fit_res/plots/plot.tex
+++ b/fit_res/plots/plot.tex
@@ -12,8 +12,8 @@
 \includegraphics[width = 0.4\textwidth]{jpsi_7_LHCb_cs.pdf}
 \includegraphics[width = 0.4\textwidth]{jpsi_13_LHCb_cs.pdf}
 
-\includegraphics[width = 0.4\textwidth]{jpsi_7_LHCb_cs_pulls.pdf}
-\includegraphics[width = 0.4\textwidth]{jpsi_13_LHCb_cs_pulls.pdf}
+\includegraphics[width = 0.4\textwidth]{jpsi_7_LHCb_cs_devs.pdf}
+\includegraphics[width = 0.4\textwidth]{jpsi_13_LHCb_cs_devs.pdf}
 \caption{J/$\psi$ 7 and 13 TeV LHCb results}
 \end{figure}
 
@@ -24,8 +24,8 @@
 \includegraphics[width = 0.4\textwidth]{jpsi_7_CMS_cs.pdf}
 \includegraphics[width = 0.4\textwidth]{jpsi_13_CMS_cs.pdf}
 
-\includegraphics[width = 0.4\textwidth]{jpsi_7_CMS_cs_pulls.pdf}
-\includegraphics[width = 0.4\textwidth]{jpsi_13_CMS_cs_pulls.pdf}
+\includegraphics[width = 0.4\textwidth]{jpsi_7_CMS_cs_devs.pdf}
+\includegraphics[width = 0.4\textwidth]{jpsi_13_CMS_cs_devs.pdf}
 \caption{J/$\psi$ 7 and 13 TeV CMS results}
 \end{figure}
 
@@ -36,8 +36,8 @@
 \includegraphics[width = 0.4\textwidth]{psi2_7_LHCb_cs.pdf}
 \includegraphics[width = 0.4\textwidth]{psi2_13_LHCb_cs.pdf}
 
-\includegraphics[width = 0.4\textwidth]{psi2_7_LHCb_cs_pulls.pdf}
-\includegraphics[width = 0.4\textwidth]{psi2_13_LHCb_cs_pulls.pdf}
+\includegraphics[width = 0.4\textwidth]{psi2_7_LHCb_cs_devs.pdf}
+\includegraphics[width = 0.4\textwidth]{psi2_13_LHCb_cs_devs.pdf}
 \caption{$\psi$(2S) 7 and 13 TeV LHCb results}
 \end{figure}
 
@@ -48,8 +48,8 @@
 \includegraphics[width = 0.4\textwidth]{psi2_7_CMS_cs.pdf}
 \includegraphics[width = 0.4\textwidth]{psi2_13_CMS_cs.pdf}
 
-\includegraphics[width = 0.4\textwidth]{psi2_7_CMS_cs_pulls.pdf}
-\includegraphics[width = 0.4\textwidth]{psi2_13_CMS_cs_pulls.pdf}
+\includegraphics[width = 0.4\textwidth]{psi2_7_CMS_cs_devs.pdf}
+\includegraphics[width = 0.4\textwidth]{psi2_13_CMS_cs_devs.pdf}
 \caption{$\psi$(2S) 7 and 13 TeV CMS results}
 \end{figure}
 
@@ -60,8 +60,8 @@
 \includegraphics[width = 0.4\textwidth]{ups1_7_LHCb_cs.pdf}
 \includegraphics[width = 0.4\textwidth]{ups1_13_LHCb_cs.pdf}
 
-\includegraphics[width = 0.4\textwidth]{ups1_7_LHCb_cs_pulls.pdf}
-\includegraphics[width = 0.4\textwidth]{ups1_13_LHCb_cs_pulls.pdf}
+\includegraphics[width = 0.4\textwidth]{ups1_7_LHCb_cs_devs.pdf}
+\includegraphics[width = 0.4\textwidth]{ups1_13_LHCb_cs_devs.pdf}
 \caption{$\Upsilon$(1S) 7 and 13 TeV LHCb results}
 \end{figure}
 
@@ -72,8 +72,8 @@
 \includegraphics[width = 0.4\textwidth]{ups1_7_CMS_cs.pdf}
 \includegraphics[width = 0.4\textwidth]{ups1_13_CMS_cs.pdf}
 
-\includegraphics[width = 0.4\textwidth]{ups1_7_CMS_cs_pulls.pdf}
-\includegraphics[width = 0.4\textwidth]{ups1_13_CMS_cs_pulls.pdf}
+\includegraphics[width = 0.4\textwidth]{ups1_7_CMS_cs_devs.pdf}
+\includegraphics[width = 0.4\textwidth]{ups1_13_CMS_cs_devs.pdf}
 \caption{$\Upsilon$(1S) 7 and 13 TeV CMS results}
 \end{figure}
 
@@ -84,8 +84,8 @@
 \includegraphics[width = 0.4\textwidth]{ups2_7_LHCb_cs.pdf}
 \includegraphics[width = 0.4\textwidth]{ups2_13_LHCb_cs.pdf}
 
-\includegraphics[width = 0.4\textwidth]{ups2_7_LHCb_cs_pulls.pdf}
-\includegraphics[width = 0.4\textwidth]{ups2_13_LHCb_cs_pulls.pdf}
+\includegraphics[width = 0.4\textwidth]{ups2_7_LHCb_cs_devs.pdf}
+\includegraphics[width = 0.4\textwidth]{ups2_13_LHCb_cs_devs.pdf}
 \caption{$\Upsilon$(2S) 7 and 13 TeV LHCb results}
 \end{figure}
 
@@ -96,8 +96,8 @@
 \includegraphics[width = 0.4\textwidth]{ups2_7_CMS_cs.pdf}
 \includegraphics[width = 0.4\textwidth]{ups2_13_CMS_cs.pdf}
 
-\includegraphics[width = 0.4\textwidth]{ups2_7_CMS_cs_pulls.pdf}
-\includegraphics[width = 0.4\textwidth]{ups2_13_CMS_cs_pulls.pdf}
+\includegraphics[width = 0.4\textwidth]{ups2_7_CMS_cs_devs.pdf}
+\includegraphics[width = 0.4\textwidth]{ups2_13_CMS_cs_devs.pdf}
 \caption{$\Upsilon$(2S) 7 and 13 TeV CMS results}
 \end{figure}
 
@@ -108,8 +108,8 @@
 \includegraphics[width = 0.4\textwidth]{ups3_7_LHCb_cs.pdf}
 \includegraphics[width = 0.4\textwidth]{ups3_13_LHCb_cs.pdf}
 
-\includegraphics[width = 0.4\textwidth]{ups3_7_LHCb_cs_pulls.pdf}
-\includegraphics[width = 0.4\textwidth]{ups3_13_LHCb_cs_pulls.pdf}
+\includegraphics[width = 0.4\textwidth]{ups3_7_LHCb_cs_devs.pdf}
+\includegraphics[width = 0.4\textwidth]{ups3_13_LHCb_cs_devs.pdf}
 \caption{$\Upsilon$(3S) 7 and 13 TeV LHCb results}
 \end{figure}
 
@@ -120,8 +120,8 @@
 \includegraphics[width = 0.4\textwidth]{ups3_7_CMS_cs.pdf}
 \includegraphics[width = 0.4\textwidth]{ups3_13_CMS_cs.pdf}
 
-\includegraphics[width = 0.4\textwidth]{ups3_7_CMS_cs_pulls.pdf}
-\includegraphics[width = 0.4\textwidth]{ups3_13_CMS_cs_pulls.pdf}
+\includegraphics[width = 0.4\textwidth]{ups3_7_CMS_cs_devs.pdf}
+\includegraphics[width = 0.4\textwidth]{ups3_13_CMS_cs_devs.pdf}
 \caption{$\Upsilon$(3S) 7 and 13 TeV CMS results}
 \end{figure}
 
