--- a/fit_res/plots/plot.tex
+++ b/fit_res/plots/plot.tex
@@ -55,6 +55,16 @@
 
 \begin{figure}
 \centering
+\includegraphics[width = 0.4\textwidth]{psi2_5_CMS_cs.pdf}
+
+\includegraphics[width = 0.4\textwidth]{psi2_5_CMS_cs_devs.pdf}
+\caption{$\psi$(2S) 5.02 TeV CMS results}
+\end{figure}
+
+\clearpage
+
+\begin{figure}
+\centering
 \includegraphics[width = 0.4\textwidth]{psi2_7_CMS_cs.pdf}
 \includegraphics[width = 0.4\textwidth]{psi2_7_ATLAS_cs.pdf}
 
