--- a/plots/fitp.tex
+++ b/plots/fitp.tex
@@ -3,36 +3,38 @@
 \begin{tabular}{c|c|c}
 Parameter & Value & Uncertainty \\
 \hline
-$L_{J/\psi}$ & 0.6407 & 0.0082 \\
-$L_{\chi_{c1}}$ & 0.675 & 0.062 \\
-$L_{\chi_{c2}}$ & 0.644 & 0.055 \\
-$L_{\psi(2S)}$ & 0.2408 & 0.0074 \\
-$L_{\Upsilon(1S)}$ & 1.628 & 0.019 \\
+$L_{J/\psi}$ & 0.6409 & 0.0081 \\
+$L_{\chi_{c1}}$ & 0.675 & 0.066 \\
+$L_{\chi_{c2}}$ & 0.644 & 0.067 \\
+$L_{\psi(2S)}$ & 0.2413 & 0.0074 \\
+$L_{\Upsilon(1S)}$ & 1.627 & 0.019 \\
 $L_{\Upsilon(2S)}$ & 1.134 & 0.016 \\
 $L_{\Upsilon(3S)}$ & 0.807 & 0.013 \\
+$L_{CMS,5.02}$ & 0.450 & 0.017 \\
 $\rho$ & 2.0 & fixed \\
 $\delta$ & 0.0 & fixed \\
-$BR(J/\psi\rightarrow\mu^+\mu^-)$ & 1.0004 & 0.0052 \\
-$BR(\chi_{c1}\rightarrow J/\psi\gamma)$ & 1.000 & 0.026 \\
-$BR(\chi_{c2}\rightarrow J/\psi\gamma)$ & 1.000 & 0.023 \\
-$BR(\psi(2S)\rightarrow\mu^+\mu^-)$ & 0.914 & 0.029 \\
-$BR(\psi(2S)\rightarrow J/\psi\pi^+\pi^-)$ & 1.0010 & 0.0085 \\
-$\mathcal L_{ATLAS,7}(c\overline c)$ & 1.005 & 0.017 \\
+$BR(J/\psi\rightarrow\mu^+\mu^-)$ & 1.0004 & 0.0055 \\
+$BR(\chi_{c1}\rightarrow J/\psi\gamma)$ & 1.0 & fixed \\
+$BR(\chi_{c2}\rightarrow J/\psi\gamma)$ & 1.0 & fixed \\
+$BR(\psi(2S)\rightarrow\mu^+\mu^-)$ & 0.915 & 0.029 \\
+$BR(\psi(2S)\rightarrow J/\psi\pi^+\pi^-)$ & 1.0010 & 0.0087 \\
+$\mathcal L_{ATLAS,7}(c\overline c)$ & 1.004 & 0.018 \\
 $\mathcal L_{ATLAS,7}(b\overline b)$ & 1.061 & 0.014 \\
+$\mathcal L_{CMS,5.02}$ & 1.000 & 0.023 \\
 $\mathcal L_{CMS,7}$ & 1.014 & 0.011 \\
 $\mathcal L_{CMS,13}$ & 1.093 & 0.014 \\
 $\mathcal L_{LHCb,7}(J/\psi)$ & 1.001 & 0.016 \\
 $\mathcal L_{LHCb,7}$ & 0.926 & 0.011 \\
 $\mathcal L_{LHCb,8}$ & 0.891 & 0.011 \\
-$\mathcal L_{LHCb,13}$ & 0.995 & 0.012 \\
+$\mathcal L_{LHCb,13}$ & 0.996 & 0.012 \\
 $f_{\beta=2,J/\psi}$ & 0.0614 & 0.0014 \\
-$f_{\beta=2,\chi_{c1}}$ & 0.106 & 0.074 \\
-$f_{\beta=2,\chi_{c2}}$ & 0.027 & 0.060 \\
-$f_{\beta=2,\psi(2S)}$ & 0.0915 & 0.0041 \\
-$f_{\beta=2,\Upsilon(1S)}$ & 0.220 & 0.011 \\
+$f_{\beta=2,\chi_{c1}}$ & 0.106 & 0.081 \\
+$f_{\beta=2,\chi_{c2}}$ & 0.027 & 0.082 \\
+$f_{\beta=2,\psi(2S)}$ & 0.0904 & 0.0040 \\
+$f_{\beta=2,\Upsilon(1S)}$ & 0.219 & 0.011 \\
 $f_{\beta=2,\Upsilon(2S)}$ & 0.323 & 0.016 \\
-$f_{\beta=2,\Upsilon(3S)}$ & 0.409 & 0.018 \\
+$f_{\beta=2,\Upsilon(3S)}$ & 0.408 & 0.019 \\
 min $p_T/M$ & 2.000 & fixed \\
 \end{tabular}
-\caption{Fit parameters ($\chi^2$ / ndf = 2763.0 / 887 = 3.1)}
+\caption{Fit parameters ($\chi^2$ / ndf = 2929.0 / 894 = 3.3)}
 \end{table}
