--- a/plots/plot.tex
+++ b/plots/plot.tex
@@ -9,6 +9,16 @@
 
 \begin{figure}
 \centering
+\includegraphics[width = 0.4\textwidth]{jpsi_5_CMS_cs.pdf}
+
+\includegraphics[width = 0.4\textwidth]{jpsi_5_CMS_cs_devs.pdf}
+\caption{J/$\psi$ 5.02 TeV CMS results}
+\end{figure}
+
+\clearpage
+
+\begin{figure}
+\centering
 \includegraphics[width = 0.4\textwidth]{jpsi_7_CMS_cs.pdf}
 \includegraphics[width = 0.4\textwidth]{jpsi_7_LHCb_cs.pdf}
 
