cleanup folders; add low-sqrts data

--- a/plots/fitp.tex
+++ b/plots/fitp.tex
@@ -3,39 +3,42 @@
 \begin{tabular}{c|c|c}
 Parameter & Value & Uncertainty \\
 \hline
-$L_{J/\psi}$ & 0.6417 & 0.0080 \\
-$L_{\chi_{c1}}$ & 0.675 & 0.069 \\
-$L_{\chi_{c2}}$ & 0.644 & 0.070 \\
-$L_{\psi(2S)}$ & 0.2414 & 0.0075 \\
-$L_{\Upsilon(1S)}$ & 1.627 & 0.020 \\
-$L_{\Upsilon(2S)}$ & 1.134 & 0.016 \\
-$L_{\Upsilon(3S)}$ & 0.807 & 0.013 \\
-$L_{J/\psi,5.02}$ & 2.100 & 0.034 \\
-$L_{\psi(2S),5.02}$ & 0.450 & 0.013 \\
+$L_{J/\psi}$ & 0.6472 & 0.0079 \\
+$L_{\chi_{c1}}$ & 0.675 & 0.064 \\
+$L_{\chi_{c2}}$ & 0.645 & 0.044 \\
+$L_{\psi(2S)}$ & 0.2413 & 0.0067 \\
+$L_{\Upsilon(1S)}$ & 1.626 & 0.019 \\
+$L_{\Upsilon(2S)}$ & 1.138 & 0.016 \\
+$L_{\Upsilon(3S)}$ & 0.810 & 0.012 \\
+$L_{J/\psi,5.02}$ & 1.0 & fixed \\
+$L_{\psi(2S),5.02}$ & 1.0 & fixed \\
 $\rho$ & 2.0 & fixed \\
 $\delta$ & 0.0 & fixed \\
-$BR(J/\psi\rightarrow\mu^+\mu^-)$ & 1.0004 & 0.0053 \\
+$BR(J/\psi\rightarrow\mu^+\mu^-)$ & 1.0004 & 0.0054 (0.0803 $\sigma$) \\
 $BR(\chi_{c1}\rightarrow J/\psi\gamma)$ & 1.0 & fixed \\
 $BR(\chi_{c2}\rightarrow J/\psi\gamma)$ & 1.0 & fixed \\
-$BR(\psi(2S)\rightarrow\mu^+\mu^-)$ & 0.915 & 0.030 \\
-$BR(\psi(2S)\rightarrow J/\psi\pi^+\pi^-)$ & 1.0010 & 0.0086 \\
-$\mathcal L_{ATLAS,7}(c\overline c)$ & 1.004 & 0.018 \\
-$\mathcal L_{ATLAS,7}(b\overline b)$ & 1.061 & 0.014 \\
+$BR(\psi(2S)\rightarrow\mu^+\mu^-)$ & 0.910 & 0.027 (-1.198 $\sigma$) \\
+$BR(\psi(2S)\rightarrow J/\psi\pi^+\pi^-)$ & 1.0011 & 0.0085 (0.1256 $\sigma$) \\
+$\mathcal L_{ATLAS,5.02}$ & 1.018 & 0.018 (0.333 $\sigma$) \\
+$\mathcal L_{ATLAS,7}(c\overline c)$ & 1.005 & 0.017 (0.260 $\sigma$) \\
+$\mathcal L_{ATLAS,7}(b\overline b)$ & 1.061 & 0.012 (1.554 $\sigma$) \\
+$\mathcal L_{CDF,1.96}(J/\psi)$ & 0.798 & 0.015 (-2.925 $\sigma$) \\
+$\mathcal L_{CDF,1.96}(\psi(2S))$ & 0.971 & 0.026 (-0.486 $\sigma$) \\
 $\mathcal L_{CMS,5.02}$ & 1.0 & fixed \\
-$\mathcal L_{CMS,7}$ & 1.014 & 0.011 \\
-$\mathcal L_{CMS,13}$ & 1.091 & 0.014 \\
-$\mathcal L_{LHCb,7}(J/\psi)$ & 1.002 & 0.016 \\
-$\mathcal L_{LHCb,7}$ & 0.927 & 0.012 \\
-$\mathcal L_{LHCb,8}$ & 0.892 & 0.011 \\
-$\mathcal L_{LHCb,13}$ & 0.997 & 0.012 \\
-$f_{\beta=2,J/\psi}$ & 0.0608 & 0.0014 \\
-$f_{\beta=2,\chi_{c1}}$ & 0.106 & 0.085 \\
-$f_{\beta=2,\chi_{c2}}$ & 0.027 & 0.079 \\
-$f_{\beta=2,\psi(2S)}$ & 0.0900 & 0.0042 \\
-$f_{\beta=2,\Upsilon(1S)}$ & 0.219 & 0.011 \\
-$f_{\beta=2,\Upsilon(2S)}$ & 0.322 & 0.016 \\
-$f_{\beta=2,\Upsilon(3S)}$ & 0.407 & 0.020 \\
+$\mathcal L_{CMS,7}$ & 1.019 & 0.011 (0.851 $\sigma$) \\
+$\mathcal L_{CMS,13}$ & 1.096 & 0.013 (4.172 $\sigma$) \\
+$\mathcal L_{LHCb,7}(J/\psi)$ & 1.010 & 0.016 (0.276 $\sigma$) \\
+$\mathcal L_{LHCb,7}$ & 0.927 & 0.011 (-4.271 $\sigma$) \\
+$\mathcal L_{LHCb,8}$ & 0.898 & 0.011 (-2.049 $\sigma$) \\
+$\mathcal L_{LHCb,13}$ & 1.003 & 0.011 (0.088 $\sigma$) \\
+$f_{\beta=2,J/\psi}$ & 0.0604 & 0.0014 \\
+$f_{\beta=2,\chi_{c1}}$ & 0.106 & 0.077 \\
+$f_{\beta=2,\chi_{c2}}$ & 0.027 & 0.053 \\
+$f_{\beta=2,\psi(2S)}$ & 0.0906 & 0.0040 \\
+$f_{\beta=2,\Upsilon(1S)}$ & 0.229 & 0.011 \\
+$f_{\beta=2,\Upsilon(2S)}$ & 0.323 & 0.016 \\
+$f_{\beta=2,\Upsilon(3S)}$ & 0.408 & 0.019 \\
 min $p_T/M$ & 2.000 & fixed \\
 \end{tabular}
-\caption{Fit parameters ($\chi^2$ / ndf = 2940.7 / 905 = 3.2)}
+\caption{Fit parameters ($\chi^2$ / ndf = 2955.0 / 961 = 3.1)}
 \end{table}
