--- a/plots/plot.tex
+++ b/plots/plot.tex
@@ -9,10 +9,21 @@
 
 \begin{figure}
 \centering
+\includegraphics[width = 0.4\textwidth]{jpsi_2_CDF_cs.pdf}
+
+\includegraphics[width = 0.4\textwidth]{jpsi_2_CDF_cs_devs.pdf}
+\caption{J/$\psi$ 1.96 TeV CDF results}
+\end{figure}
+
+
+\begin{figure}
+\centering
+\includegraphics[width = 0.4\textwidth]{jpsi_5_ATLAS_cs.pdf}
 \includegraphics[width = 0.4\textwidth]{jpsi_5_CMS_cs.pdf}
 
+\includegraphics[width = 0.4\textwidth]{jpsi_5_ATLAS_cs_devs.pdf}
 \includegraphics[width = 0.4\textwidth]{jpsi_5_CMS_cs_devs.pdf}
-\caption{J/$\psi$ 5.02 TeV CMS results}
+\caption{J/$\psi$ 5.02 TeV ATLAS and CMS results}
 \end{figure}
 
 \clearpage
@@ -65,8 +76,20 @@
 
 \begin{figure}
 \centering
+\includegraphics[width = 0.4\textwidth]{psi2_2_CDF_cs.pdf}
+
+\includegraphics[width = 0.4\textwidth]{psi2_2_CDF_cs_devs.pdf}
+\caption{$\psi$(2S) 1.96 TeV CDF results}
+\end{figure}
+
+\clearpage
+
+\begin{figure}
+\centering
+\includegraphics[width = 0.4\textwidth]{psi2_5_ATLAS_cs.pdf}
 \includegraphics[width = 0.4\textwidth]{psi2_5_CMS_cs.pdf}
 
+\includegraphics[width = 0.4\textwidth]{psi2_5_ATLAS_cs_devs.pdf}
 \includegraphics[width = 0.4\textwidth]{psi2_5_CMS_cs_devs.pdf}
 \caption{$\psi$(2S) 5.02 TeV CMS results}
 \end{figure}
@@ -75,11 +98,11 @@
 
 \begin{figure}
 \centering
-\includegraphics[width = 0.4\textwidth]{psi2_7_CMS_cs.pdf}
 \includegraphics[width = 0.4\textwidth]{psi2_7_ATLAS_cs.pdf}
+\includegraphics[width = 0.4\textwidth]{psi2_7_CMS_cs.pdf}
 
-\includegraphics[width = 0.4\textwidth]{psi2_7_CMS_cs_devs.pdf}
 \includegraphics[width = 0.4\textwidth]{psi2_7_ATLAS_cs_devs.pdf}
+\includegraphics[width = 0.4\textwidth]{psi2_7_CMS_cs_devs.pdf}
 \caption{$\psi$(2S) 7 TeV CMS and ATLAS results}
 \end{figure}
 
@@ -109,11 +132,21 @@
 
 \begin{figure}
 \centering
-\includegraphics[width = 0.4\textwidth]{ups1_7_CMS_cs.pdf}
-\includegraphics[width = 0.4\textwidth]{ups1_7_ATLAS_cs.pdf}
+\includegraphics[width = 0.4\textwidth]{ups1_5_ATLAS_cs.pdf}
 
-\includegraphics[width = 0.4\textwidth]{ups1_7_CMS_cs_devs.pdf}
+\includegraphics[width = 0.4\textwidth]{ups1_5_ATLAS_cs_devs.pdf}
+\caption{$\Upsilon$(1S) 5.02 TeV ATLAS results}
+\end{figure}
+
+\clearpage
+
+\begin{figure}
+\centering
+\includegraphics[width = 0.4\textwidth]{ups1_7_ATLAS_cs.pdf}
+\includegraphics[width = 0.4\textwidth]{ups1_7_CMS_cs.pdf}
+
 \includegraphics[width = 0.4\textwidth]{ups1_7_ATLAS_cs_devs.pdf}
+\includegraphics[width = 0.4\textwidth]{ups1_7_CMS_cs_devs.pdf}
 \caption{$\Upsilon$(1S) 7 TeV CMS and ATLAS results}
 \end{figure}
 
@@ -145,11 +178,21 @@
 
 \begin{figure}
 \centering
-\includegraphics[width = 0.4\textwidth]{ups2_7_CMS_cs.pdf}
-\includegraphics[width = 0.4\textwidth]{ups2_7_ATLAS_cs.pdf}
+\includegraphics[width = 0.4\textwidth]{ups2_5_ATLAS_cs.pdf}
 
-\includegraphics[width = 0.4\textwidth]{ups2_7_CMS_cs_devs.pdf}
+\includegraphics[width = 0.4\textwidth]{ups2_5_ATLAS_cs_devs.pdf}
+\caption{$\Upsilon$(2S) 5.02 TeV ATLAS results}
+\end{figure}
+
+\clearpage
+
+\begin{figure}
+\centering
+\includegraphics[width = 0.4\textwidth]{ups2_7_ATLAS_cs.pdf}
+\includegraphics[width = 0.4\textwidth]{ups2_7_CMS_cs.pdf}
+
 \includegraphics[width = 0.4\textwidth]{ups2_7_ATLAS_cs_devs.pdf}
+\includegraphics[width = 0.4\textwidth]{ups2_7_CMS_cs_devs.pdf}
 \caption{$\Upsilon$(2S) 7 TeV CMS and ATLAS results}
 \end{figure}
 
@@ -181,11 +224,21 @@
 
 \begin{figure}
 \centering
-\includegraphics[width = 0.4\textwidth]{ups3_7_CMS_cs.pdf}
-\includegraphics[width = 0.4\textwidth]{ups3_7_ATLAS_cs.pdf}
+\includegraphics[width = 0.4\textwidth]{ups3_5_ATLAS_cs.pdf}
 
-\includegraphics[width = 0.4\textwidth]{ups3_7_CMS_cs_devs.pdf}
+\includegraphics[width = 0.4\textwidth]{ups3_5_ATLAS_cs_devs.pdf}
+\caption{$\Upsilon$(3S) 5.02 TeV ATLAS results}
+\end{figure}
+
+\clearpage
+
+\begin{figure}
+\centering
+\includegraphics[width = 0.4\textwidth]{ups3_7_ATLAS_cs.pdf}
+\includegraphics[width = 0.4\textwidth]{ups3_7_CMS_cs.pdf}
+
 \includegraphics[width = 0.4\textwidth]{ups3_7_ATLAS_cs_devs.pdf}
+\includegraphics[width = 0.4\textwidth]{ups3_7_CMS_cs_devs.pdf}
 \caption{$\Upsilon$(3S) 7 TeV CMS and ATLAS results}
 \end{figure}
 
