beta model with one beta per state; minimum pT/M check with new beta model

--- a/model_beta/plots/fitp.tex
+++ b/model_beta/plots/fitp.tex
@@ -3,35 +3,40 @@
 \begin{tabular}{c|c|c}
 Parameter & Value & Uncertainty \\
 \hline
-$L_{J/\psi}$ & 0.6670 & 0.0082 \\
-$L_{\chi_{c1}}$ & 0.676 & 0.043 \\
-$L_{\chi_{c2}}$ & 0.597 & 0.042 \\
-$L_{\psi(2S)}$ & 0.2514 & 0.0074 \\
-$L_{\Upsilon(1S)}$ & 1.762 & 0.021 \\
-$L_{\Upsilon(2S)}$ & 1.214 & 0.016 \\
-$L_{\Upsilon(3S)}$ & 0.838 & 0.012 \\
+$L_{J/\psi}$ & 0.6642 & 0.0078 \\
+$L_{\chi_{c1}}$ & 0.671 & 0.070 \\
+$L_{\chi_{c2}}$ & 0.640 & 0.034 \\
+$L_{\psi(2S)}$ & 0.2506 & 0.0075 \\
+$L_{\Upsilon(1S)}$ & 1.732 & 0.019 \\
+$L_{\Upsilon(2S)}$ & 1.218 & 0.017 \\
+$L_{\Upsilon(3S)}$ & 0.867 & 0.013 \\
 $\rho$ & 2.0 & fixed \\
 $\delta$ & 0.0 & fixed \\
-$\beta_{c\overline c}$ & 2.8042 & 0.0039 \\
-$\beta_{b\overline b}$ & 2.7224 & 0.0093 \\
-$BR(J/\psi\rightarrow\mu^+\mu^-)$ & 1.0005 & 0.0055 (0.0965 $\sigma$) \\
+$\beta_{J/\psi}$ & 2.8083 & 0.0040 \\
+$\beta_{\chi_{c1}}$ & 2.79 & 0.14 \\
+$\beta_{\chi_{c2}}$ & 2.931 & 0.052 \\
+$\beta_{\psi(2S)}$ & 2.8018 & 0.0073 \\
+$\beta_{\Upsilon(1S)}$ & 2.765 & 0.011 \\
+$\beta_{\Upsilon(2S)}$ & 2.695 & 0.017 \\
+$\beta_{\Upsilon(3S)}$ & 2.632 & 0.019 \\
+$BR(J/\psi\rightarrow\mu^+\mu^-)$ & 1.0005 & 0.0054 (0.0882 $\sigma$) \\
 $BR(\chi_{c1}\rightarrow J/\psi\gamma)$ & 1.0 & fixed \\
 $BR(\chi_{c2}\rightarrow J/\psi\gamma)$ & 1.0 & fixed \\
-$BR(\psi(2S)\rightarrow\mu^+\mu^-)$ & 0.890 & 0.028 (-1.472 $\sigma$) \\
-$BR(\psi(2S)\rightarrow J/\psi\pi^+\pi^-)$ & 1.0013 & 0.0086 (0.1509 $\sigma$) \\
-$\mathcal L_{ATLAS,5.02}$ & 1.056 & 0.023 (1.032 $\sigma$) \\
-$\mathcal L_{ATLAS,7}(c\overline c)$ & 1.006 & 0.017 (0.313 $\sigma$) \\
-$\mathcal L_{ATLAS,7}(b\overline b)$ & 1.054 & 0.013 (1.389 $\sigma$) \\
-$\mathcal L_{CDF,1.96}(J/\psi)$ & 0.772 & 0.016 (-3.305 $\sigma$) \\
-$\mathcal L_{CDF,1.96}(\psi(2S))$ & 0.970 & 0.030 (-0.507 $\sigma$) \\
-$\mathcal L_{CMS,5.02}$ & 1.0 & fixed \\
-$\mathcal L_{CMS,7}$ & 1.084 & 0.011 (3.807 $\sigma$) \\
-$\mathcal L_{CMS,13}$ & 1.079 & 0.013 (3.428 $\sigma$) \\
-$\mathcal L_{LHCb,7}(J/\psi)$ & 0.964 & 0.017 (-1.031 $\sigma$) \\
-$\mathcal L_{LHCb,7}$ & 0.922 & 0.012 (-4.604 $\sigma$) \\
-$\mathcal L_{LHCb,8}$ & 0.843 & 0.010 (-3.142 $\sigma$) \\
-$\mathcal L_{LHCb,13}$ & 0.922 & 0.011 (-2.004 $\sigma$) \\
+$BR(\psi(2S)\rightarrow\mu^+\mu^-)$ & 0.901 & 0.028 (-1.323 $\sigma$) \\
+$BR(\psi(2S)\rightarrow J/\psi\pi^+\pi^-)$ & 1.0012 & 0.0082 (0.1374 $\sigma$) \\
+$\mathcal L_{ATLAS,5.02}$ & 1.001 & 0.017 (0.019 $\sigma$) \\
+$\mathcal L_{ATLAS,7}(c\overline c)$ & 1.005 & 0.017 (0.284 $\sigma$) \\
+$\mathcal L_{ATLAS,7}(b\overline b)$ & 1.050 & 0.013 (1.283 $\sigma$) \\
+$\mathcal L_{CDF,1.96}(J/\psi)$ & 0.770 & 0.016 (-3.337 $\sigma$) \\
+$\mathcal L_{CDF,1.96}(\psi(2S))$ & 0.957 & 0.028 (-0.719 $\sigma$) \\
+$\mathcal L_{CMS,5.02}$ & 1.041 & 0.014 (1.767 $\sigma$) \\
+$\mathcal L_{CMS,7}$ & 1.073 & 0.011 (3.330 $\sigma$) \\
+$\mathcal L_{CMS,13}$ & 1.071 & 0.013 (3.091 $\sigma$) \\
+$\mathcal L_{LHCb,7}(J/\psi)$ & 0.961 & 0.015 (-1.106 $\sigma$) \\
+$\mathcal L_{LHCb,7}$ & 0.921 & 0.011 (-4.657 $\sigma$) \\
+$\mathcal L_{LHCb,8}$ & 0.8421 & 0.0098 (-3.1581 $\sigma$) \\
+$\mathcal L_{LHCb,13}$ & 0.912 & 0.010 (-2.247 $\sigma$) \\
 min $p_T/M$ & 2.000 & fixed \\
 \end{tabular}
-\caption{Fit parameters ($\chi^2$ / ndf = 2224.6 / 904 = 2.5)}
+\caption{Fit parameters ($\chi^2$ / ndf = 2223.0 / 912 = 2.4)}
 \end{table}
