organize NP per dataset; new checks with modulated g(cosalpha) function; added histos for absolute pulls and deviations

--- a/checks_cosalpha/check_gbase/plots/fitp.tex
+++ b/checks_cosalpha/check_gbase/plots/fitp.tex
@@ -15,6 +15,8 @@ $\beta_1$ & 2.161 & 0.064 \\
 $\beta_2$ & 3.011 & 0.026 \\
 $\rho$ & 2.0 & fixed \\
 $\delta$ & 0.0 & fixed \\
+$\kappa_2$ & 0.0 & fixed \\
+$\kappa_4$ & 0.0 & fixed \\
 $BR(J/\psi\rightarrow\mu^+\mu^-)$ & 1.0004 & 0.0055 (0.0778 $\sigma$) \\
 $BR(\chi_{c1}\rightarrow J/\psi\gamma)$ & 1.0 & fixed \\
 $BR(\chi_{c2}\rightarrow J/\psi\gamma)$ & 1.0 & fixed \\
